--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -1,4 +1,4 @@
-% Created 2017-02-21 Tue 15:37
+% Created 2017-03-21 Tue 15:37
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt,aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -20,6 +20,7 @@
 \usepackage{pgfplots,pgfplotstable}\usetikzlibrary{pgfplots.groupplots}\usepackage[babel=true,kerning=true]{microtype}\usepackage{smartdiagram}
 \addbibresource{intro.bib}
 \usetikzlibrary{mindmap,trees,shapes,arrows,spy,3d,decorations.pathmorphing,pgfplots.statistics,pgfplots.dateplot}
+\hypersetup{colorlinks,linkcolor=,urlcolor=magenta}
 \definecolor{c1}{rgb}{0,0,0.562}
 \definecolor{c2}{rgb}{0,0,0.875}
 \definecolor{c3}{rgb}{0,0.25,1}
@@ -49,7 +50,7 @@
 \tableofcontents
 \end{frame}
 
-\begin{frame}[label={sec:orgb07ce86}]{Mathieu Fauvel}
+\begin{frame}[label={sec:org021e7f9}]{Mathieu Fauvel}
 \begin{center}
 \begin{tabular}{ccc}
   \includegraphics[width=0.3\linewidth]{figures/logo-INRA-transp.png}
@@ -70,13 +71,13 @@
 \end{itemize}
 \end{frame}
 \section{Introduction}
-\label{sec:orgdca8443}
-\begin{frame}[label={sec:orge91be9e}]{Remote sensing}
+\label{sec:org7bd4f50}
+\begin{frame}[label={sec:org8aeace8}]{Remote sensing}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
-[[\begin{center}
+\begin{center}
 \includegraphics[width=\linewidth]{./figures/remote_sensing_acquisition.png}
-\end{center}]
+\end{center}
 \emph{Image taken from \cite{974727}}.
 \end{column}
 \begin{column}{0.5\columnwidth}
@@ -93,7 +94,7 @@ usually formated in terms of \emph{digital image data}.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[fragile,label={sec:org21a1114}]{Fields of application}
+\begin{frame}[fragile,label={sec:orge910115}]{Fields of application}
 \tikzset{grow cyclic list/.code={%
   \def\tikzgrowthpositions{{#1}}%
   \foreach \n [count=\i,remember=\i]in {#1}{}%
@@ -140,7 +141,7 @@ usually formated in terms of \emph{digital image data}.
     \end{tikzpicture}}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org1e09f30}]{Hekla Volcano, Iceland}
+\begin{frame}[label={sec:org4a95915}]{Hekla Volcano, Iceland}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{center}
@@ -160,10 +161,10 @@ usually formated in terms of \emph{digital image data}.
 \end{frame}
 
 \section{Hyperspectral imagery}
-\label{sec:orgb54ee35}
+\label{sec:orgb40c188}
 \subsection{Element of physics}
-\label{sec:org5d02ebd}
-\begin{frame}[label={sec:orgbfc5539}]{Electromagnetic wave}
+\label{sec:orgbdc7913}
+\begin{frame}[label={sec:org1d8cb1b}]{Electromagnetic wave}
 \begin{center}
 \begin{tikzpicture}[samples=100]
   \filldraw[domain=0:2*pi,color=blue,fill=blue!30] plot (\x,0,{2*sin(\x*2 r)});
@@ -194,14 +195,14 @@ usually formated in terms of \emph{digital image data}.
 \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org615622d}]{Electromagnetic spectrum}
+\begin{frame}[label={sec:org1cc9ff0}]{Electromagnetic spectrum}
 \begin{center}
 \includegraphics[angle=-1,width=0.8\linewidth]{./figures/spectralInformation.pdf}
 \end{center}
 
 From \cite{manolakis2016hyperspectral}.
 \end{frame}
-\begin{frame}[label={sec:org202fc96}]{Spectral reflectance}
+\begin{frame}[label={sec:orgdb335d6}]{Spectral reflectance}
 \alert{Reflectance}: 
 \begin{itemize}
 \item Capacity of a given surface to reflect the incident light,
@@ -230,7 +231,7 @@ From \cite{manolakis2016hyperspectral}.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgfaa63ef}]{Spectral reflectance curves}
+\begin{frame}[label={sec:orga3b99e5}]{Spectral reflectance curves}
 \alert{Spectral reflectance curves or spectral signature}: Radiometric identity card
 
 \begin{center}
@@ -248,8 +249,8 @@ From \cite{manolakis2016hyperspectral}.
 \end{center}
 \end{frame}
 \subsection{Digital remote sensing images}
-\label{sec:org7f32dd5}
-\begin{frame}[label={sec:org91b30e1}]{Remote sensing images}
+\label{sec:orgbacae75}
+\begin{frame}[label={sec:orgfbb60a8}]{Remote sensing images}
 \emph{A  remote sensing  image  is a  sampling of  a  spatial, spectral  and
 temporel process}.
 
@@ -283,7 +284,7 @@ temporel process}.
     \end{tikzpicture}
   \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgceb65f8}]{Characteristics of remote sensing images}
+\begin{frame}[label={sec:org00b7562}]{Characteristics of remote sensing images}
 \begin{itemize}
 \item Spatial resolution: \emph{Ability to distinguish two closed objects}.
 \begin{center}
@@ -330,7 +331,7 @@ Ultraspectral & > 100\\
 spatial \emph{and} spectral resolution at the same time.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org778179a}]{Multispectral versus hyperspectral}
+\begin{frame}[label={sec:org16e3762}]{Multispectral versus hyperspectral}
 \begin{center}
 \begin{tikzpicture}[]
   \begin{axis}[,xmin=0.4,xmax=2.56,ymin=0,ymax=0.6,grid=both,width=0.9\linewidth,height=0.8\textheight,title=Pleiade versus Hypxim]
@@ -342,7 +343,7 @@ spatial \emph{and} spectral resolution at the same time.
   \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orga8a66c1}]{Hyperspectral sensors}
+\begin{frame}[label={sec:org89e0878}]{Hyperspectral sensors}
 \begin{center}
   \begin{tikzpicture}
   \begin{semilogxaxis}[grid=both,xlabel= \small Spatial resolution (in meters per pixel),ylabel=\small Number of spectral channels,legend style={cells={anchor=east},legend pos=outer north east,},width=0.9\linewidth,height=0.95\textheight,xmax=1300,ymin=0,ymax=320,every node near coord/.append style={font=\small}]      
@@ -353,8 +354,8 @@ spatial \emph{and} spectral resolution at the same time.
 \end{center}
 \end{frame}
 \subsection{Spectral signatures}
-\label{sec:orgadfe11b}
-\begin{frame}[label={sec:org7622c67}]{Vegetation 1/2}
+\label{sec:org12c09fb}
+\begin{frame}[label={sec:org80bdd80}]{Vegetation 1/2}
 Healthy vegetation (high photosynthesis)
 \begin{itemize}
 \item Absorption in \emph{blue} and \emph{red} domain,
@@ -366,7 +367,7 @@ Healthy vegetation (high photosynthesis)
 \includegraphics[width=0.5\linewidth]{./figures/spectral_curve_vegetation.jpg}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgf658d98}]{Vegetation 2/2}
+\begin{frame}[label={sec:orgf345344}]{Vegetation 2/2}
 \begin{columns}
 \begin{column}{0.35\columnwidth}
 Factor modifying the reflectance
@@ -394,7 +395,7 @@ Factor modifying the reflectance
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org459ede6}]{Water}
+\begin{frame}[label={sec:orgf7bf4f3}]{Water}
 \begin{center}
   \begin{tikzpicture}
     \begin{axis}[xmin=400,xmax=2500,ymin=0,ymax=0.1,grid,xlabel=$\lambda~({\mu}m)$,ylabel=Reflectance,width=0.9\linewidth,height=0.5\linewidth,cycle list name=color list,/pgf/number format/1000 sep={},/pgf/number format/fixed,]
@@ -423,7 +424,7 @@ Factor modifying the reflectance
   \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org058119b}]{Human made materials}
+\begin{frame}[label={sec:orga2c8d8f}]{Human made materials}
 \begin{center}
   \begin{tikzpicture}
     \pgfplotsset{every axis legend/.append style={at={(0.5,1.03)},anchor=south}}
@@ -440,10 +441,10 @@ Factor modifying the reflectance
 \end{center}
 \end{frame}
 \section{Current challenges in hyperspectral}
-\label{sec:orgdf7841b}
+\label{sec:orgbdd33a6}
 \subsection{What is remote sensing made of ?}
-\label{sec:orgdc98a75}
-\begin{frame}[label={sec:org1626cdb}]{An interdisciplinary field}
+\label{sec:org2487b88}
+\begin{frame}[label={sec:orgcaf6a57}]{An interdisciplinary field}
 \begin{center}
 \smartdiagramset{planet color=orange!60,
 distance planet-satellite=4cm
@@ -452,7 +453,7 @@ distance planet-satellite=4cm
 {\textsc{Hyperspectral}\\ \textsc{Remote Sensing},Computer \\Science,Signal and Image \\ Processing, Pattern \\Recognition, Physics, Environemental\\ Science}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org96e3db2}]{Processing chain}
+\begin{frame}[label={sec:orgfcc2935}]{Processing chain}
 \smartdiagramset{uniform sequence color=true,
 sequence item border color=black,sequence item font size=\small,
 sequence item text color=white,sequence item text width=2.75cm
@@ -481,7 +482,7 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgafbaeb4}]{Hot topics}
+\begin{frame}[label={sec:org924a2f3}]{Hot topics}
 \begin{center}
   \begin{tikzpicture}
     \begin{axis}[date coordinates in=x,xtick=data, ybar,title=Number of published papers per year about "hyperspectral remote sensing" (\emph{ISI Web of science}),width=0.9\linewidth,height=0.9\textheight,grid=both,date ZERO=1999-09-01,xmin=1999-09-01,xmax=2016-05-01,xticklabel style={rotate=45},xticklabel={\year},ymin=0,ymax=800]
@@ -508,30 +509,30 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{center}
 \end{frame}
 \subsection{Current challenges}
-\label{sec:org13d552d}
-\begin{frame}[label={sec:orgfbea7e2}]{Challenges}
+\label{sec:orgae0fe05}
+\begin{frame}[label={sec:org050ae68}]{Challenges}
 \begin{itemize}
 \item \uline{Pattern recognition}:
 \begin{itemize}
 \item High dimensional data,
 \item Spectral variability,
-\item Reduce ground-thruth,
+\item Reduce ground-thruth.
 \end{itemize}
 \item \uline{Computer science}:
 \begin{itemize}
-\item Large volume of data
-\item Real time constraints
+\item Large volume of data,
+\item Real time constraints.
 \end{itemize}
 \item \uline{Thematic application}:
 \begin{itemize}
-\item Environmental issues
-\item Military issues
-\item Astrophysical issues
+\item Environmental issues,
+\item Military issues,
+\item Astrophysical issues.
 \end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org453ca97}]{Spectral variability}
+\begin{frame}[label={sec:org2d676c0}]{Spectral variability}
 \begin{center}
   \begin{tikzpicture}
     \begin{axis}[grid=both,width=\linewidth,height=0.5\linewidth,xmin=350,xmax=2400,ymin=0,ymax=0.5,mark=none,/pgf/number format/1000 sep={},/pgf/number format/fixed,thick,ticklabel style = {font=\footnotesize},title=Grasslands measurements]
@@ -564,8 +565,8 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{center}
 \end{frame}
 \subsection{High dimensional data}
-\label{sec:org23e0ad6}
-\begin{frame}[label={sec:orgdb8c85b}]{Properties of HD spaces 1/3}
+\label{sec:org2a487c9}
+\begin{frame}[label={sec:orge221b7d}]{Properties of HD spaces 1/3}
 \begin{itemize}
 \item High number of measurements \(d\) but limited number \(n\) of samples.
 \item High dimensional space do not behave as low/moderate dimensional space \cite{661089}:
@@ -597,7 +598,7 @@ sequence item text color=white,sequence item text width=2.75cm
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org2675437}]{Properties of HD spaces 2/3}
+\begin{frame}[label={sec:org603bd26}]{Properties of HD spaces 2/3}
 Consider                                                             a
 r.v.      \(\mathbf{x}\sim\mathcal{N}(\mathbf{0},\mathbf{I})\).      The
 likelihood of \(t=\|\mathbf{x}\|\) is given by
@@ -623,7 +624,7 @@ which is maximum for \(t^*=\sqrt{d-1}\) \cite{661089}.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb52ba75}]{Properties of HD spaces 3/3}
+\begin{frame}[label={sec:orgb9c7f4e}]{Properties of HD spaces 3/3}
 \begin{itemize}
 \item \alert{Concentration of measure} phenomenon \cite{Aggarwal2001}: if \(\mathbf{x}\) r.v. with i.i.d variables
 $$ \frac{d_M(\mathbf{x})-d_m(\mathbf{x})}{d_M(\mathbf{x})}\to_{p} 0$$
@@ -636,7 +637,7 @@ for all Minkowski norm: \(\|\mathbf{x}\|=\big(\sum_{i=1}^{d}|x_i|^{p} \big)^{1/p
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd4d75d7}]{Consequences for the analysis}
+\begin{frame}[label={sec:org3ca8d90}]{Consequences for the analysis}
 \begin{itemize}
 \item Curse of dimensionality: Number of points to uniformly sample a unit hypercube (step=0.1)
   \begin{center}
@@ -663,8 +664,8 @@ value.}"
 \end{itemize}
 \end{frame}
 \section{Questions}
-\label{sec:org183d6e5}
-\begin{frame}[label={sec:org4148527}]{Is there a fake ?}
+\label{sec:org5f5d62e}
+\begin{frame}[label={sec:org996bea6}]{Is there a fake ?}
 \begin{onlyenv}<1>
 \begin{center}
 \includegraphics[width=0.9\linewidth]{./figures/demo.pdf}
@@ -702,7 +703,7 @@ value.}"
 \end{onlyenv}
 \end{frame}
 
-\begin{frame}[label={sec:org5f8ace1}]{Spectra}
+\begin{frame}[label={sec:org4163a37}]{Spectra}
 \pgfplotstableread{figures/cotton_spectra.txt}\loadedtable
 \begin{center}
 \begin{tikzpicture}\begin{axis}[xlabel=$\lambda$, ylabel=Reflectance,  xmin=0.4, xmax=2.5, ymin=0,   ymax=1, grid=both,width=0.9\textwidth, height=0.4\textwidth]
@@ -718,7 +719,7 @@ value.}"
 There are two spectra of the same material (cotton), before and after drying. Which are they ?
 \end{frame}
 
-\begin{frame}[label={sec:org7a4b31c}]{Gaussian distribution}
+\begin{frame}[label={sec:orga5de41a}]{Gaussian distribution}
 What is the number of parameters to estimate for a Gaussian distribution
 
 \begin{itemize}
@@ -737,8 +738,18 @@ What is the number of parameters to estimate for a Gaussian distribution
 \end{block}
 \end{frame}
 \section{References}
-\label{sec:org4da3679}
+\label{sec:org5740153}
 \begin{frame}[fragile,allowframebreaks,label=]{Bibliography}
 \printbibliography
+\end{frame}
+\begin{frame}[label={sec:org8f4b839}]{}
+\begin{center}
+\tiny Creative Commons Attribution-ShareAlike 4.0 Unported License
+\normalsize
+
+\begin{center}
+\includegraphics[width=0.1\textwidth]{figures/cc-by-sa.png}
+\end{center}
+\end{center}
 \end{frame}
 \end{document}
